--- a/config/server.properties
+++ b/config/server.properties
@@ -134,3 +134,16 @@ zookeeper.connection.timeout.ms=18000
 # We override this to 0 here as it makes for a better out-of-the-box experience for development and testing.
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
+
+
+cluster.name=tiger
+qcommon.start=true
+
+super.users=User:admin
+authorizer.class.name=kafka.security.authorizer.AclAuthorizer
+listeners=SASL_PLAINTEXT://:9092
+sasl.enabled.mechanisms=SCRAM-SHA-256
+sasl.mechanism.inter.broker.protocol=SCRAM-SHA-256
+security.inter.broker.protocol=SASL_PLAINTEXT
+
+
