--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,5 @@ scalaVersion=2.13.5
 task=build
 org.gradle.jvmargs=-Xmx2g -Xss4m -XX:+UseParallelGC
 org.gradle.parallel=true
-org.gradle.java.home=/Users/sanyue/Library/Java/JavaVirtualMachines/jbr-17.0.7/Contents/Home
+#org.gradle.java.home=/Users/sanyue/Library/Java/JavaVirtualMachines/jbr-17.0.7/Contents/Home
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home
