--- a/config/server.properties
+++ b/config/server.properties
@@ -20,6 +20,8 @@
 # The id of the broker. This must be set to a unique integer for each broker.
 broker.id=2
 
+num.replica.fetchers=10
+
 ############################# Socket Server Settings #############################
 
 # The address the socket server listens on. It will get the value returned from 
