--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -61,8 +61,8 @@ log4j.appender.authorizerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 log4j.logger.org.apache.zookeeper=INFO
 
 # Change the two lines below to adjust the general broker logging level (output to server.log and stdout)
-log4j.logger.kafka=INFO
-log4j.logger.org.apache.kafka=INFO
+log4j.logger.kafka=TRACE
+log4j.logger.org.apache.kafka=TRACE
 
 # Change to DEBUG or TRACE to enable request logging
 log4j.logger.kafka.request.logger=WARN, requestAppender
