--- a/config/server.properties
+++ b/config/server.properties
@@ -22,6 +22,8 @@ broker.id=2
 
 num.replica.fetchers=10
 
+broker.rack=1111
+
 ############################# Socket Server Settings #############################
 
 # The address the socket server listens on. It will get the value returned from 
@@ -122,7 +124,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2181
+zookeeper.connect=localhost:2182
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
