添加 KafkaController 的代码注释

--- a/config/zookeeper.properties
+++ b/config/zookeeper.properties
@@ -11,9 +11,9 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just
 # example sakes.
-dataDir=/data/zookeeper
+dataDir=/Users/sanyue/tmp/kafka/zk
 # the port at which the clients will connect
-clientPort=2181
+clientPort=2187
 # the maximum number of client connections.
 # increase this if you need to handle more clients
 maxClientCnxns=0
@@ -31,4 +31,3 @@ autopurge.purgeInterval=1
 #server.1=
 #server.2=
 #server.3=
-log.dir=/home/infra/qbus2.0/log/zookeeper
