--- a/config/server.properties
+++ b/config/server.properties
@@ -18,7 +18,7 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=2
+broker.id=1
 
 num.replica.fetchers=10
 
@@ -33,7 +33,7 @@ broker.rack=1111
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
-
+#
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
 # returned from java.net.InetAddress.getCanonicalHostName().
@@ -61,7 +61,7 @@ socket.request.max.bytes=104857600
 ############################# Log Basics #############################
 
 # A comma separated list of directories under which to store log files
-log.dirs=/tmp/kafka-logs
+log.dirs=/Users/sanyue/tmp/kafka/data
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
@@ -124,7 +124,7 @@ log.retention.check.interval.ms=300000
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002".
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
-zookeeper.connect=localhost:2182
+zookeeper.connect=localhost:2187
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
@@ -143,12 +143,15 @@ group.initial.rebalance.delay.ms=0
 cluster.name=tiger
 qcommon.start=true
 
-super.users=User:admin
-authorizer.class.name=kafka.security.authorizer.AclAuthorizer
+#super.users=User:admin
+#authorizer.class.name=kafka.security.authorizer.AclAuthorizer
 listeners=PLAINTEXT://:9095
 #sasl.enabled.mechanisms=SCRAM-SHA-256
 #sasl.mechanism.inter.broker.protocol=SCRAM-SHA-256
 ## ???????
 #security.inter.broker.protocol=SASL_PLAINTEXT
+
+message.max.bytes=1048576
+
 
 
